--- a/WakaBot/WakaBot.csproj
+++ b/WakaBot/WakaBot.csproj
@@ -17,8 +17,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
-    <PackageReference Include="ZedGraph" Version="5.1.7" />
+    <PackageReference Include="QuickChart" Version="2.3.0" />
   </ItemGroup>
 
 </Project>
+ 
