--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "github-colors"]
-	path = github-colors
+[submodule "WakaBot/github-colors"]
+	path = WakaBot/github-colors
 	url = https://github.com/ozh/github-colors.git
