feat: update user model

--- a/WakaBot/logconfig.json
+++ b/WakaBot/logconfig.json
@@ -12,7 +12,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Logs\\wakabot.log",
+          "path": "Logs/wakabot.log",
           "rollingInterval": "Day"
         }
       }
