--- a/WakaBot/logconfig.json
+++ b/WakaBot/logconfig.json
@@ -15,7 +15,8 @@
           "path": "Logs/wakabot.log",
           "rollingInterval": "Day"
         }
-      }
+      },
+      { "Name": "AzureApp" }
     ]
   }
 }
