--- a/WakaBot.Web/WakaBot.Web.csproj
+++ b/WakaBot.Web/WakaBot.Web.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WakaBot\WakaBot.Core.csproj" />
+    <ProjectReference Include="..\WakaBot.Core\WakaBot.Core.csproj" />
   </ItemGroup>
 
 </Project>
