feat: oauth registration handle validation

--- a/.gitignore
+++ b/.gitignore
@@ -365,7 +365,7 @@ MigrationBackup/
 FodyWeavers.xsd
 
 # Configuration file containting sensitive data
-appsettings.json
+appsettings*.json
 
 # sqlite files
 *.db
