feat: improve loading config files log to discord add basic docs update docker compose to use psql

--- a/WakaBot.Core/WakaBot.Core.csproj
+++ b/WakaBot.Core/WakaBot.Core.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="QuickChart" Version="2.3.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.Discord.Lite" Version="0.2.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 </Project>
